# prostate-cancer-treatment-prediction

./: .gitattributes  README.md  main.py  pyproject.toml
data/processed/: df_cluster_centroids.csv
data/raw/: df_rhc_completo.csv  df_rhc_selected.csv  pacigeral_filtrado.csv
notebooks/: data_exploration.ipynb  model_testing.ipynb
